--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -164,7 +164,7 @@
 <div id="slide12" class="step slide" data-x="16500" data-y="0" data-rotate="90">
     <div class="cover">
       <h1>
-        So why we<br/> need TypeScript?
+        So why do we<br/> need TypeScript?
       </h1>
       <br/>
     </div>
