--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -160,9 +160,9 @@
 <div id="slide11" class="step slide" data-x="15000" data-y="0" data-rotate="180">
     <div class="cover">
       <h1>
-        "The principles, when applied together, intend to make it more
+        The principles, when applied together, intend to make it more
         likely that a programmer will create a system that is easy to
-        maintain and extend over time"
+        maintain and extend over time
       </h1>
       <br/>
     </div>
