--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -624,7 +624,7 @@ myUsers.Add(new Message()); // Error because of generic type validation
       Want to learn more?
     </h1>
     <br/>
-    <a href="https://www.packtpub.com/web-development/learning-typescript">
+    <a href="http://www.amazon.co.uk/Learning-TypeScript-Remo-H-Jansen/dp/1783985542/">
         <img src="http://www.remojansen.com/website/assets/learning_typescript.png" style="height: 400px;"/>
     </a>
     <h2>Pre-order now! or join our next meetup for a chance<br/> to win a free physical copy of my upcoming book.</h2>
