--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -1,6 +1,7 @@
 <div id="slide1" class="step slide" data-x="0" data-y="0">
     <div class="cover">
-        <h1>Introducing TypeScript</h1>
+        <img src="../media/me.jpg" alt="chart">
+        <h1 style="margin-top:0px;">Introducing TypeScript</h1>
         <h2>
             Large-scale JavaScript application development.
         </h2>
