--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -1,6 +1,6 @@
 <div id="slide1" class="step slide" data-x="0" data-y="0">
     <div class="cover">
-        <img src="../media/me.jpg" alt="chart">
+        <img src="../media/me.jpg" alt="chart" style="margin-top: 5%;">
         <h1 style="margin-top:0px;">Introducing TypeScript</h1>
         <h2>
             Large-scale JavaScript application development.
