--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -675,3 +675,14 @@ myUsers.Add(new Message()); // Error because of generic type validation
   </div>
 </div>
 <!--########################################################################################################################## -->
+<script>
+    $(document).ready(function () {
+        var url = window.location.href;
+        if (url.indexOf("wolk") !== -1) {
+            $('.sponsor').show();
+        }
+        else {
+            $('.sponsor').hide();
+        }
+    });
+</script>
