--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -6,7 +6,9 @@
             Large-scale JavaScript application development.
         </h2>
         <h3>
-            Remo H. Jansen<br/><br/>
+            Remo H. Jansen<br/>
+        </h3>
+        <h3 class="contact">
             <a href="http://www.remojansen.com">www.remojansen.com</a> -
             <a href="https://twitter.com/OweR_ReLoaDeD">@OweR_ReLoaDeD</a> -
             <a href="http://blog.wolksoftware.com">blog.wolksoftware.com</a>
@@ -661,7 +663,9 @@ myUsers.Add(new Message()); // Error because of generic type validation
         Do you have any questions?
     </h2>
     <h3>
-        Remo H. Jansen<br/><br/>
+        Remo H. Jansen<br/>
+    </h3>
+    <h3 class="contact">
         <a href="http://www.remojansen.com">www.remojansen.com</a> -
         <a href="https://twitter.com/OweR_ReLoaDeD">@OweR_ReLoaDeD</a> -
         <a href="http://blog.wolksoftware.com">blog.wolksoftware.com</a>
