--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -684,9 +684,11 @@ myUsers.Add(new Message()); // Error because of generic type validation
         var url = window.location.href;
         if (url.indexOf("wolk") !== -1) {
             $('.sponsor').show();
+            $('.contact').show();
         }
         else {
             $('.sponsor').hide();
+            $('.contact').hide();
         }
     });
 </script>
