added decorators talk

--- a/talks/data/slides/typescript_decorators.html
+++ b/talks/data/slides/typescript_decorators.html
@@ -545,6 +545,8 @@ class Car {
 </pre>
 <p>Many other applications</p>
 <pre class="prettyprint linenums">
+import { Component } from 'angular2/angular2';
+
 @Component({
   selector: 'app',
   template: '&lt;h1&gt;test&lt;/h1&gt;'
