--- a/talks/data/slides/typescript_decorators.html
+++ b/talks/data/slides/typescript_decorators.html
@@ -129,7 +129,7 @@ var AppComponent2 = (function () {
 })();
 </pre>
 <div style="clear: both;"></div>
-<h2 style="color: red;">Remember! Decorators are applyed to classes NOT instances!</h2>
+<h2 style="color: red;">Remember! Decorators are applied to classes NOT instances!</h2>
   <div class="sponsor">
     <a href="http://blog.wolksoftware.com/">
         <img src="../media/wolk_logo.png" alt="logo" />
@@ -298,7 +298,7 @@ function logMethod(target, key, descriptor) {
   <h1>Property Decorator</h1>
   <p>
     A property decorator function is a function that accepts two arguments:
-    The object that owns the property,
+    The object that owns the property and
     the key for the property (a string or a symbol).
     The return value of this decorator is ignored.
   </p>
