--- a/talks/data/slides/typescript_decorators.html
+++ b/talks/data/slides/typescript_decorators.html
@@ -359,7 +359,7 @@ function logParameter(target: any, key : string, index : number) {
 }
 </pre>
 Parameter decorator must be
-<a href="https://gist.github.com/remojansen/16c661a7afd68e22ac6e#file-parameter_decorator-ts">used in combination with a method parameter</a>.
+<a href="https://gist.github.com/remojansen/16c661a7afd68e22ac6e#file-parameter_decorator-ts">used in combination with a method decorator</a>.
 <pre class="prettyprint linenums">
 class Person {
   // ...
