--- a/surprise/index.html
+++ b/surprise/index.html
@@ -1409,6 +1409,14 @@ body {
           onExpiry: function () {
             for (var i=0; i < 100; i++) {
               $('body').append("<div class='balloon balloon" + i + "'></div>");
+              setTimeout(function() {
+                  alert(`
+                      Happy birthday! You are going to the Imperial Hotel in Copenhagen!!
+                      Hotel: https://www.imperial-hotel-copenhagen.com/the-hotel/gallery/
+                      Dates: Fri, 28 Oct 16 (11:45) - Mon, 31 Oct 16 (20:10). 
+                      Hope you have a very happy day! I love u xxxxx
+                  `);
+              }, 5000);
             }
           }
         });
