--- a/surprise/index.html
+++ b/surprise/index.html
@@ -1410,7 +1410,7 @@ body {
           $('body').append("<div class='balloon balloon" + i + "'></div>");
         }
         setTimeout(function() {
-          $("#clock").html("Happy birthday!");
+          $("#clock").html(`<div class="is-countdown">Happy birthday!</div>`);
         }, 5000);
 
         setTimeout(function() {
