--- a/surprise/index.html
+++ b/surprise/index.html
@@ -18,6 +18,7 @@
             border: none;
             margin-top: 20%;
             color: #ffffff;
+            text-align: center;
             font-size: 70px;
         }
 
