--- a/talks/data/slides/introducing_typescript.html
+++ b/talks/data/slides/introducing_typescript.html
@@ -667,7 +667,7 @@ myUsers.Add(new Message()); // Error because of generic type validation
     </h3>
     <h3 class="contact">
         <a href="http://www.remojansen.com">www.remojansen.com</a> -
-        <a href="https://twitter.com/OweR_ReLoaDeD">@OweR_ReLoaDeD</a> -
+        <a href="https://twitter.com/RemoHJansen">@RemoHJansen</a> -
         <a href="http://blog.wolksoftware.com">blog.wolksoftware.com</a>
     </h3>
     <br/>
