--- a/talks/data/slides/typescript_decorators.html
+++ b/talks/data/slides/typescript_decorators.html
@@ -602,7 +602,7 @@ class App {
     </h3>
     <h3 class="contact">
         <a href="http://www.remojansen.com">www.remojansen.com</a> -
-        <a href="https://twitter.com/OweR_ReLoaDeD">@OweR_ReLoaDeD</a> -
+        <a href="https://twitter.com/RemoHJansen">@RemoHJansen</a> -
         <a href="http://blog.wolksoftware.com">blog.wolksoftware.com</a>
     </h3>
     <br/>
