--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
         <link href="./website/css/bootstrap-sons-of-obsidian.css" rel="stylesheet"/>
         <link href="./website/css/style.css" rel="stylesheet"/>
         <link href="./website/css/slideout.css" rel="stylesheet"/>
+        <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Person",
+          "name": "Remo H. Jansen",
+          "url": "http://www.remojansen.com",
+          "sameAs": [
+            "https://twitter.com/RemoHJansen",
+            "https://www.linkedin.com/in/remojansen/",
+            "https://plus.google.com/u/2/+RemoHJansen"
+          ]
+        }
+        </script>
     </head>
     <body>
         <div class="loader" style="text-align:center; margin-top:10%;">
@@ -40,45 +53,3 @@
         </script>
     </body>
 </html>
-<!--
-                                                       __
-                                                     .d$$b
-                                                   .' TO$;\
-                                                  /  : TP._;
-                                                 / _.;  :Tb|
-                                                /   /   ;j$j
-                                            _.-"       d$$$$
-                                          .' ..       d$$$$;
-                                         /  /P'      d$$$$P. |\
-                                        /   "      .d$$$P' |\^"l
-                                      .'           `T$P^"""""  :
-                                  ._.'      _.'                ;
-                               `-.-".-'-' ._.       _.-"    .-"
-                             `.-" _____  ._              .-"
-                            -(.g$$$$$$$b.              .'
-                              ""^^T$$$P^)            .(:
-                                _/  -"  /.'         /:/;
-                             ._.'-'`-'  ")/         /;/;
-                          `-.-"..--""   " /         /  ;
-                         .-" ..--""        -'          :
-                         ..--""--.-"         (\      .-(\
-                           ..--""              `-\(\/;`
-                             _.                      :
-                                                     ;`-
-                                                    :\
-                                                    ;
-                         __      __________  .____     ____  __.
-                        /  \    /  \_____  \ |    |   |    |/ _|
-                        \   \/\/   //   |   \|    |   |      <
-                         \        //    |    \    |___|    |  \
-                          \__/\  / \_______  /_______ \____|__ \
-                               \/          \/        \/       \/
-      _________________  ________________________      __  _____ _____________________
-     /   _____/\_____  \ \_   _____/\__    ___/  \    /  \/  _  \\______   \_   _____/
-     \_____  \  /   |   \ |    __)    |    |  \   \/\/   /  /_\  \|       _/|    __)_
-     /        \/    |    \|     \     |    |   \        /    |    \    |   \|        \
-    /_______  /\_______  /\___  /     |____|    \__/\  /\____|__  /____|_  /_______  /
-            \/         \/     \/                     \/         \/       \/        \/
-
-                Copyright 2014 Wolk Software Limited - All rights reserved
--->
