--- a/talks/index.html
+++ b/talks/index.html
@@ -18,13 +18,7 @@
     <div class="container">
         <h2>Talks</h2>
         <p>
-          My name is Remo H. Jansen and I'm a <b id="iam">web development ninja</b><br/>
-          I'm Lead UX Engineer
-          <a href="http://moneymate.com/">@MoneyMate</a>
-          &amp; CEO
-          <a href="http://www.wolksoftware.com/">@WolkSoftwareLtd</a>.
-          You can learn more about me at
-          <a href="http://www.remojansen.com/">www.remojansen.com</a>.
+          Here you will find some a list of my talks at meetups and conferences:
         </p>
         <div id="maincontainer"></div>
         <footer>
